manifests/coredns/postinstall/overlays/lab/resources/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: coredns
  namespace: coredns
spec:
  parentRefs:
  - name: clusteringress-frontdoor
    sectionName: dns-tcp
    namespace: gatewayapi
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - backendRefs:
    - name: coredns
      port: 53
      weight: 1
      kind: Service
